Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 Personal/
+Managemnt/*.md
+How to network.md
+Architecture/Frequently Forgotten Requirements.md
+Programming/Example of a Microservice Stack.md
