More questions that architects should always ask themselves.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-Personal/
-Managemnt/*.md
+Management/*.md
 How to network.md
 Architecture/Frequently Forgotten Requirements.md
 Programming/Example of a Microservice Stack.md
