Long overdue cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Management/*.md
 How to network.md
 Architecture/Frequently Forgotten Requirements.md
 Programming/Example of a Microservice Stack.md
+Personal/On the loss of my father.md
